# Data_Anon_Algorithms

./: README.md  pyproject.toml
results/: df_gauss_20260610_101811.csv  df_gauss_20260610_101811_report.txt  df_laplace_20260610_101726.csv  df_laplace_20260610_101726_report.txt  k_mondrian_20260610_101419_report.txt  k_mondrian_20260610_101541.csv  k_mondrian_20260610_101541_report.txt  l_diversity_20260610_101613.csv  l_diversity_20260610_101613_report.txt  t_closeness_20260610_101703.csv  t_closeness_20260610_101703_report.txt
src/: main.py
src/algorithms/: df_gauss.py  df_laplace.py  k_mondrian.py  l_diversity.py  t_closeness.py
src/utils/: data_loader.py  report.py
