[project]
name = "data-anon-algorithms"
version = "0.1.0"
description = "Data anonymization algorithms: k-Mondrian, l-Diversity, t-Closeness, DP-Laplace, DP-Gaussian"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
]
